--- a/docs/raport.tex
+++ b/docs/raport.tex
@@ -10,6 +10,29 @@
 
 \section{Cel projektu}
 
-Gra "snek", jest implementacją gry "Snake"
+Gra "snek", która jest implementacją popularnej gry "Snake"
+
+\section{Teoria}
+
+Gracz steruje wężem poruszającym się po planszy o określonej wielkości, uważając aby nie wpaść głową na resztę swojego ciała, gdyż zakończy to grę. W trakcie poruszania się po planszy wąż zjada pojawiające się losowo na mapie jedzenie, które powoduje przedłużenie się jego ciała i zwiększa liczbę uzyskanych punktów.
+
+\section{Możliwości gry}
+
+Gra umożliwia zresetowanie stanu w dowolnej chwili i pokazuje aktualny wynik gracza zależny od długości węża. W przypadku porażki gra wyświetla komunikat informujący o przegranej.
+
+\section{Sterowanie}
+
+Sterowanie wężem odbywa się za pomocą strzałek. Klawisz R doprowadza do zresetowania gry, a ESC do wyjścia.
+
+\section{Opis klas}
+
+\subsection{\textbf{\textit{Game}}}
+
+\subsection{\textbf{\textit{Grid}}}
+
+\subsection{\textbf{\textit{Snake}}}
+
+\subsection{\textbf{\textit{Food}}}
+
 
 \end{document}
